FIX: Dark Mode colour for 404 Image
- Updated background colour to something pretty good i think

--- a/site-flask-mustache/www/css/error.css
+++ b/site-flask-mustache/www/css/error.css
@@ -1,5 +1,5 @@
 :root {
-  --svg-dark-bg-colour: #4F1784;
+  --svg-dark-bg-colour: #0F6734;
   --svg-dark-shadow-colour: #000000;
   --svg-light-bg-colour: #E1EFF8;
   --svg-light-shadow-colour: #000000;
